aligned the duck and yellow box correctly

--- a/style/index.css
+++ b/style/index.css
@@ -4,9 +4,6 @@ body{
 
 .container{
     display: flex;
-    flex-direction: row;
-    justify-content:space-evenly;
-    align-items: flex-start;
 }
 
 .red-container{
@@ -14,6 +11,12 @@ body{
     margin:243px;
     width: 950px;
     height: 600px;
+    display: flex;
+    flex-direction: row;
+    justify-content:space-evenly;
+    align-items: flex-start;
+    max-width: 100%;
+    max-height: 100%;
 
 }
 
@@ -21,9 +24,14 @@ body{
     background-color: #FFB039;
     width: 345px;
     height: 600px;
-    margin-left: 609px;
-    margin-top: -466px;
+    margin-left: 610px;
+    margin-top: -533px;
+}
 
+.yellow-container img{
+    object-fit: contain;
+    margin-left: -300px;
+    margin-top: 52px;
 }
 
 .label{
@@ -31,14 +39,15 @@ body{
     font-weight: 400;
     font-style: normal;
     line-height: auto;
-    letter-spacing: 10%;
+    letter-spacing: 0.1em;
     font-size: 18px;
-    color: #fcffff;
+    color: #feffff;
     margin-left: 65px;
     margin-top: 64px;
     display: flex;
     flex-direction: column;
     align-content: flex-start;
+    justify-content: space-between;
 }
 
 .input-field{
@@ -46,7 +55,7 @@ body{
     font-weight: 400;
     font-style: normal;
     line-height: auto;
-    letter-spacing: 30%;
+    letter-spacing: 0.3em;
     font-size: 18px;
     color: #feffff;
     margin-left: 65px;
